[package]
edition = "2018"
name = "alertmanager_forwarder"
version = "0.1.0"
[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
clap = "*"
log = "0.4.14"
once_cell = "1.8.0"
reqwest = { version = "0.11.7",  features = [ "json" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
toml = "0.5.8"
tracing-journald = "0.2.0"
tracing-subscriber = { version = "0.3.3", features = ["tracing-log", "env-filter"] }
tracing = "0.1.29"

[dependencies.rocket]
features = ["json"]
version = "0.5.0-rc.1"

[dependencies.tokio]
features = ["full"]
version = "*"
